--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,8 @@ target 'freecharge' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'freechargeTests' do
     inherit! :complete
     # Pods for testing
