--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/slider": "^4.2.2",
+    "@react-native-firebase/app": "^14.9.1",
+    "@react-native-firebase/perf": "^14.9.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-get-sms-android": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.12.0",
@@ -26,17 +33,25 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@callstack/repack": "^2.5.2",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.5",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2"
+    "react-native-bundle-visualizer": "^3.1.1",
+    "react-test-renderer": "17.0.2",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.72.0"
   },
   "jest": {
     "preset": "react-native"
